--- a/src/WebApp/_Imports.razor
+++ b/src/WebApp/_Imports.razor
@@ -1,10 +1,15 @@
 @using System.Net.Http
+@using Krompaco.AspNetCore.Hotwired.TurboStreams
+@using Microsoft.Extensions.Caching.Distributed
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.SignalR
 @using Microsoft.JSInterop
 @using WebApp
+@using WebApp.Hubs
 @using WebApp.Models
 @using WebApp.Shared
+@using WebApp.Services
