--- a/src/WebApp/Pages/PlayerList.razor
+++ b/src/WebApp/Pages/PlayerList.razor
@@ -1,11 +1,15 @@
-﻿@page "/playerlist"
+@page "/playerlist"
 
 <PageTitle>Player list page</PageTitle>
 
 <Content>
-    <h1 class="font-semibold tracking-tight text-3xl">Player list page</h1>
+    <p>
+        <a class="link-primary" href="/">Index page</a>
+    </p>
 
-    <p class="mt-5">A page showing some capabilities and a smooth way of using View Components to keep markup DRY.</p>
+    <h1 class="font-semibold tracking-tight text-3xl mt-4">Player list page</h1>
+
+    <p class="mt-5">A page showing some capabilities and a smooth way of using Razor Components to keep markup DRY.</p>
 
     <div class="bg-white rounded shadow p-4 mt-10">
         <h1 class="font-semibold tracking-tight text-xl">Players "database" example</h1>
