Make work with Preview 6

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,23 @@
 	.turbo-progress-bar {
 		@apply h-2 bg-gray-200;
 	}
+
+	/* Blazor default form validation styles */
+	ul.validation-errors {
+		@apply text-red-600 marker:text-red-400 list-disc pl-5 space-y-1;
+	}
+
+	/* ul.validation-errors > li.validation-message {
+		@apply text-red-600 mt-1 p-4 bg-gray-50;
+	} */
+
+	div.validation-message {
+		@apply text-red-600 mt-1;
+	}
+
+	.invalid {
+		@apply ring-2 ring-red-600;
+	}
 }
 
 @tailwind utilities;
