--- a/src/WebApp/Pages/GlobalMessageForm.razor
+++ b/src/WebApp/Pages/GlobalMessageForm.razor
@@ -3,7 +3,7 @@
 @inject FormDataProvider FormData
 @inject ILogger<GlobalMessageForm> Logger
 @inject SiteComponentRenderer ComponentRenderer
-@inject IHubContext<AppHub> hub
+@inject IHubContext<AppHub> Hub
 
 <PageTitle>Global message form page</PageTitle>
 
@@ -14,46 +14,41 @@
         <p class="mt-2">This page is typically not used on it's own. The Turbo Frame starts after this text.</p>
 
         <turbo-frame id="js-global-message-form" aria-live="polite">
-            @* Accessibility-wise it's most likely better to just set HTML required attributes on the inputs but I want to have a sample of model validation in here too *@
-            @*@await Component.InvokeAsync("ValidationSummary", this.Model)*@
-
-            <EditForm action="/globalmessageform" method="post" Model="globalMessageFormModel" OnValidSubmit="HandleSubmit" class="space-y-6 mt-4">
-                <div>
-                    <LabelFromDisplayName For="@(() => globalMessageFormModel.Message)" ForId="message-1" />
-                    <InputText @bind-Value="globalMessageFormModel.Message" id="message-1" class="mt-2" type="text" />
-                </div>
-                <div>
-                    <button type="submit" class="button-primary">Send message</button>
-                </div>
+            <EditForm action="/globalmessageform" method="post" Model="GlobalMessage" OnValidSubmit="HandleValidSubmit" OnInvalidSubmit="HandleInvalidSubmit">
+                <FormContent>
+                    <DataAnnotationsValidator />
+                    <ValidationSummary />
+                    <div>
+                        <LabelFromDisplayName For="@(() => GlobalMessage.Message)" ForId="message-1" />
+                        <InputText @bind-Value="GlobalMessage.Message" id="message-1" class="mt-2" type="text" />
+                    </div>
+                    <div>
+                        <button type="submit" class="button-primary">Send message</button>
+                    </div>
+                </FormContent>
             </EditForm>
         </turbo-frame>
     </div>
 </Content>
 
 @code {
-    GlobalMessageFormModel globalMessageFormModel = new();
+    [SupplyParameterFromForm]
+    protected GlobalMessageFormModel GlobalMessage { get; set; } = new();
 
-    protected override void OnInitialized()
+    protected async Task HandleInvalidSubmit()
     {
-        // Manually model bind the form data using the FormDataProvider service
-        if (FormData.Entries.TryGetValue("Message", out var messageValues))
-        {
-            globalMessageFormModel.Message = messageValues.First();
-        }
+        Logger.LogInformation("Hello from GlobalMessageForm.HandleInvalidSubmit()");
+
+        // This follows the recommendation to set status = 422 for validation errors
+        ////this.Response.SetTurboValidationErrorStatus(this.Request);
+        ////return result;
     }
 
-    protected async Task HandleSubmit()
+    protected async Task HandleValidSubmit()
     {
-        Logger.LogInformation("Hello from GlobalMessage.HandleSubmit()");
+        Logger.LogInformation("Hello from GlobalMessageForm.HandleValidSubmit()");
 
-        ////if (!this.ModelState.IsValid)
-        ////{
-        ////    // This follows the recommendation to set status = 422 for validation errors
-        ////    this.Response.SetTurboValidationErrorStatus(this.Request);
-        ////    return result;
-        ////}
-
-        var alertModel = new Models.Alert(globalMessageFormModel.Message!);
+        var alertModel = new Models.Alert(this.GlobalMessage.Message!);
         var alertDictionary = new Dictionary<string, object?>
                                 {
                                     { "AlertModel", alertModel },
@@ -67,6 +62,6 @@
                 TemplateInnerHtml = html,
             };
 
-        await this.hub.Clients.All.SendAsync("GlobalMessageReceived", alertMessage.ToString());
+        await this.Hub.Clients.All.SendAsync("GlobalMessageReceived", alertMessage.ToString());
     }
 }
